fix: add text-align for .response p

--- a/public/style.css
+++ b/public/style.css
@@ -97,6 +97,7 @@ body {
 .response p {
   font-size: 18px;
   margin-bottom: 10px;
+  text-align: center;
 }
 
 .topLogo {
